--- a/DaemonCharacter/DaemonCharacter/Views/Campaign/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Campaign/Create.cshtml
@@ -64,7 +64,9 @@
         </p>
     </fieldset>
 }
-
+<div style="color:red">
+    @ViewBag.message
+</div>
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
