--- a/DaemonCharacter/DaemonCharacter/Views/Character/Delete.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Character/Delete.cshtml
@@ -25,6 +25,9 @@
         @Html.DisplayFor(model => model.name)
     </div>
 </fieldset>
+<div style="color:red">
+    @ViewBag.message
+</div>
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     <p>
