--- a/DaemonCharacter/DaemonCharacter/Views/Home/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Home/Index.cshtml
@@ -1,28 +1,283 @@
 ﻿@{
     ViewBag.Title = "Home Page";
-}   
-<h3>We suggest the following:</h3>
-<ol class="round">
-    <li class="one">
-        <h5>Getting Started</h5>
-        ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-        enables a clean separation of concerns and that gives you full control over markup
-        for enjoyable, agile development. ASP.NET MVC includes many features that enable
-        fast, TDD-friendly development for creating sophisticated applications that use
-        the latest web standards.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Learn more…</a>
-    </li>
+}
+<div id="carousel-example-generic" class="carousel slide carousel-fade" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target='#carousel-example-generic' data-slide-to='0' class='active'>
+            <img ID="Image1" src="~/Images/12.jpg" style="width:50px;height:50px;" class="img-circle" />
+        </li>
+        <li data-target='#carousel-example-generic' data-slide-to='1'>
+            <img ID="Image2" src="~/Images/13.jpg" style="width:50px;height:50px;" class="img-circle" />
+        </li>
 
-    <li class="two">
-        <h5>Add NuGet packages and jump-start your coding</h5>
-        NuGet makes it easy to install and update free libraries and tools.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245153">Learn more…</a>
-    </li>
+        <li data-target='#carousel-example-generic' data-slide-to='2'>
+            <img ID="Image3" src="~/Images/14.jpg"
+                 style="width:50px;height:50px;" class="img-circle" />
+        </li>
+    </ol>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+        <div class="item active one">
+            <div class="main-text hidden-xs">
+                <div class="col-md-12 text-center">
+                    <h1>
+                        TEST TEST TEST TEST TEST <br /> <span class="yellow">- TEST  </span>
+                    </h1>
+                    @*<div class="">
+                        <asp:HyperLink ID="HyperLink1" class="btn btn-clear btn-sm btn-min-block">Login</asp:HyperLink>
+                        <asp:HyperLink ID="HyperLink2" class="btn btn-clear btn-sm btn-min-block                           ">Registration</asp:HyperLink>
+                    </div>*@
+                </div>
+            </div>
+            <img src="~/Images/12.jpg" alt="" style="z-index:-1;" />
+        </div>
+        <div class="item two">
+            <div class="main-text hidden-xs">
+                <div class="col-md-12 text-center">
+                    <h1>
+                        A <b class="yellow">Goal</b> without <b class="yellow">a plan</b><br />
+                        <span class="span">is just a wish</span>
+                    </h1>
+                    @*<div class="">
+                        <asp:HyperLink ID="HyperLink3" class="btn btn-clear btn-sm btn-min-block">learn More</asp:HyperLink>
+                        <asp:HyperLink ID="HyperLink4" class="btn btn-clear btn-sm btn-min-block                           ">Download</asp:HyperLink>
+                    </div>*@
+                </div>
+            </div>
+            <img src="~/Images/13.jpg" alt="" />
+        </div>
+        <div class="item three">
+            <div class="main-text hidden-xs">
+                <div class="col-md-12 text-center">
+                    <h1>
+                        You cannot<b class="yellow"> believe</b> in <b class="yellow">God</b><br />
+                        <span class="span">until you believe in yourself.</span>
+                    </h1>
+                    @*<div class="">
+                        <asp:HyperLink ID="HyperLink5" class="btn btn-clear btn-sm btn-min-block">Android</asp:HyperLink>
+                        <asp:HyperLink ID="HyperLink6" class="btn btn-clear btn-sm btn-min-block                           ">Apple</asp:HyperLink>
+                    </div>*@
+                </div>
+            </div>
+            <img src="~/Images/14.jpg" alt="" />
+        </div>
+    </div>
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
+</div>
+<!-- Carousel -->
+<!-- Service Section -->
+<section id="services" class="padding100">
+    <div class="container">
+        <div class="row">
+            <h2 class="background double animated wow fadeInUp" data-wow-delay="0.2s">
+                <span><strong>Features</strong></span>
+            </h2>
+        </div>
+        <!-- ./ end row -->
+        <div class="row">
+            <div class="col-md-4">
+                <i class="fa fa-laptop animated wow fadeInDown"></i>
+                <div class="sc-inner">
+                    <h4>
+                        Responsive Design
+                    </h4>
+                    <p>
+                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
+                        an update when new items arrive!
+                    </p>
+                </div>
+            </div>
+            <!-- ./ end service box -->
+            <div class="col-md-4">
+                <i class="fa fa-support animated wow fadeInDown" data-wow-delay="0.2s"></i>
+                <div class="sc-inner">
+                    <h4>
+                        Quick Support
+                    </h4>
+                    <p>
+                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
+                        an update when new items arrive!
+                    </p>
+                </div>
+            </div>
+            <!-- ./ end service box -->
+            <div class="col-md-4">
+                <i class="fa fa-paper-plane-o animated wow fadeInDown" data-wow-delay="0.4s"></i>
+                <div class="sc-inner">
+                    <h4>
+                        Mailchimp Newsletter
+                    </h4>
+                    <p>
+                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
+                        an update when new items arrive!
+                    </p>
+                </div>
+            </div>
+            <!-- ./ end service box -->
+        </div>
+        <!-- ./ end row -->
+        <div class="row">
+            <div class="col-md-4">
+                <i class="fa fa-pie-chart animated wow fadeInUp" data-wow-delay="0.6s"></i>
+                <div class="sc-inner">
+                    <h4>
+                        Awesome Stats
+                    </h4>
+                    <p>
+                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
+                        an update when new items arrive!
+                    </p>
+                </div>
+            </div>
+            <!-- ./ end service box -->
+            <div class="col-md-4">
+                <i class="fa fa-puzzle-piece animated wow fadeInUp" data-wow-delay="0.8s"></i>
+                <div class="sc-inner">
+                    <h4>
+                        Easy update
+                    </h4>
+                    <p>
+                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
+                        an update when new items arrive!
+                    </p>
+                </div>
+            </div>
+            <!-- ./ end service box -->
+            <div class="col-md-4">
+                <i class="fa fa-youtube-play animated wow fadeInUp" data-wow-delay="0.10s"></i>
+                <div class="sc-inner">
+                    <h4>
+                        Video Support
+                    </h4>
+                    <p>
+                        Want more Bootstrap themes & templates? Subscribe to our mailing list to receive
+                        an update when new items arrive!
+                    </p>
+                </div>
+            </div>
+            <!-- ./ end service box -->
+        </div>
+        <!-- ./ end row -->
+    </div>
 
-    <li class="three">
-        <h5>Find Web Hosting</h5>
-        You can easily find a web hosting company that offers the right mix of features
-        and price for your applications.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
-    </li>
-</ol>
+</section>
+<!-- ./ End Service Section -->
+<!-- Page Content -->
+<section class="service-info padding100">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h4>
+                    Creative design
+                </h4>
+                <p>
+                    Akshara is a library to buy Bootstrap themes and templates for your business need.
+                    Want more Bootstrap themes & templates ?
+                </p>
+                <ul>
+                    <li><i class="fa fa-check"></i>Fully Responsive with bootstrap framework</li>
+                    <li><i class="fa fa-check"></i>Clean Code with HTML5 & CSS3</li>
+                    <li><i class="fa fa-check"></i>Working Contact Form with PHP Script</li>
+                    <li><i class="fa fa-check"></i>Dropbox login form \\\\</li>
+                    <li><i class="fa fa-check"></i>Best for mobiles and business sites & landing page.</li>
+                </ul>
+                <a href="#download" class="btn btn-download app">
+                    <i class="fa fa-android"></i><strong>
+                        Download App
+                    </strong> <span>Click to download</span>
+                </a>
+            </div>
+            <!-- ./ app info box -->
+            <div class="col-md-6">
+                <img src="~/Images/2.png" class="img-responsive" alt="" />
+            </div>
+            <!-- ./ app info box -->
+        </div>
+    </div>
+</section>
+<!-- /.container -->
+<!-- Products Section -->
+@*<section id="products" class="products-list padding100">
+    <div class="container">
+        <div class="row">
+            <div class="section-title col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+                <h2 class="animated wow fadeInLeft" data-wow-delay="0.4s">
+                    Our Innovative Latest <span class="common">' Products ' </span>All are free to download.
+                    Get more ...
+                </h2>
+            </div>
+        </div>
+        <!-- ./end row -->
+        <div class="row">
+            <div class="col-sm-12 animated wow fadeInUp" data-wow-delay="0.6s">
+                <div id="screens" class="owl-carousel">
+                    <div>
+                        <img src="~/Images/products/1.jpg" class="img-responsive" alt="screens">
+                    </div>
+                    <div>
+                        <img src="~/Images/products/2.jpg" class="img-responsive" alt="screens">
+                    </div>
+                    <div>
+                        <img src="~/Images/products/3.jpg" class="img-responsive" alt="screens">
+                    </div>
+                    <div>
+                        <img src="~/Images/products/1.jpg" class="img-responsive" alt="screens">
+                    </div>
+                    <div>
+                        <img src="~/Images/products/2.jpg" class="img-responsive" alt="screens">
+                    </div>
+                    <div>
+                        <img src="~/Images/products/3.jpg" class="img-responsive" alt="screens">
+                    </div>
+                    <div>
+                        <img src="~/Images/products/1.jpg" class="img-responsive" alt="screens">
+                    </div>
+                </div>
+                <!-- ./ end slider -->
+            </div>
+        </div>
+        <!-- ./ end row -->
+    </div>
+</section>*@
+<!-- Download Section -->
+@*<section id="download" class="padding100">
+    <div class="container">
+        <div class="row">
+            <div class="section-title col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
+                <h2 class="animated wow fadeInLeft" data-wow-delay="0.4s">
+                    Waiting for what <span class="common">' DOWNLOAD NOW'</span>
+                </h2>
+
+            </div>
+        </div>
+        <!-- ./end row -->
+        <div class="row">
+            <div class="col-sm-8 col-sm-offset-2 text-center">
+                <div class="download-wrap animated wow fadeInLeft" data-wow-delay="0.4s">
+                    <a href="#" class="btn btn-download wow fadeInUp">
+                        <i class="fa fa-android"></i><strong>
+                            Download App
+                        </strong> <span>From Play Store</span>
+                    </a><a href="#" class="btn btn-download app wow fadeInUp"
+                           data-wow-delay="0.2s">
+                        <i class="fa fa-apple"></i><strong>Download App</strong> <span>
+                            From App Store
+                        </span>
+                    </a><a href="#" class="btn btn-download window wow fadeInUp"
+                           data-wow-delay="0.2s">
+                        <i class="fa fa-windows"></i><strong>Download App</strong>
+                        <span>From windows store</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!-- ./end row -->
+    </div>
+</section>*@
