--- a/DaemonCharacter/DaemonCharacter/Views/AttributeType/Details.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/AttributeType/Details.cshtml
@@ -25,6 +25,6 @@
     </div>
 </fieldset>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { idAttributeType = Model.idAttributeType }) |
+    @Html.ActionLink("Edit", "Edit", new { idAttributeType = Model.id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
