--- a/DaemonCharacter/DaemonCharacter/Views/Shared/_Layout.cshtml
+++ b/DaemonCharacter/DaemonCharacter/Views/Shared/_Layout.cshtml
@@ -2,11 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet">
+
+    <!-- SmartMenus jQuery Bootstrap Addon CSS -->
+    <link href="~/Content/jquery.smartmenus.bootstrap.css" rel="stylesheet">
+    <link href="~/Content/owl/owl.carousel.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/owl/owl.theme.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/owl/owl.transitions.css" rel="stylesheet" type="text/css" />
+
+
+    <!-- Custom CSS -->
+    <link href="~/Content/1-col-portfolio.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu:300,400,700' rel='stylesheet'
+          type='text/css'>
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,700italic,400,700"
+          rel="stylesheet" type="text/css" />
+
+
+    <!-- Required plugin - Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
+    <link href="../fonts/font-awesome.min.css" rel="stylesheet" type="text/css" />
+
+
     <title>@ViewBag.Title - Daemon Character</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
-    <link href="@Url.Content("~/Content/Menu.css")"
-          rel="stylesheet" type="text/css" />
+    @*<link href="@Url.Content("~/Content/Menu.css")"
+        rel="stylesheet" type="text/css" />*@
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -15,30 +41,142 @@
     @RenderSection("scripts", required: false)
 </head>
 <body>
-    <header>
-        <aside class="float-right" id="login">
-            @Html.Partial("_LoginPartial")
-        </aside>
-        <div class="content-wrapper" id="site-logo">
-            <div class="float-left">
-                <p class="site-title">@Html.ActionLink("Daemon Character", "Index", "Home")</p>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="~/Home/"><i class="fa fa-logo"></i>TEST TEST</a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <!-- Left nav -->
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Menu<span id="Span1" class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" data-dropdown-in="fadeInUp" data-dropdown-out="fadeOutDown">
+                            <li>
+                                Attributes
+                                <ul class="dropdown">
+                                    <li>@Html.ActionLink("List Attr", "Index", "Attribute")</li>
+                                    <li>@Html.ActionLink("Create", "Create", "Attribute")</li>
+                                </ul>
+                            </li>
+                            <li>
+                                Attribute Types
+                                <ul class="dropdown">
+                                    <li>@Html.ActionLink("List Types", "Index", "AttributeType")</li>
+                                    <li>@Html.ActionLink("Create", "Create", "AttributeType")</li>
+                                </ul>
+                            </li>
+
+                            <li><a href="#">blog-1</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </li>
+                    <li id="contact"><a href="contact.htm">Contact</a></li>
+                    <li>
+                        <!-- add search form -->
+                        <div class="navbar-form" role="search">
+                            <div class="input-group">
+                                <input type="text" ID="txtsearch" placeholder="Search this site" class="form-control" />
+                                @*<span class="input-group-btn">
+                                        <input type="button" ID="lbsearch" ToolTip="Search" class="btn btn-default"
+                                                        Text='<i class="glyphicon glyphicon-search"></i>' />
+                                    </span>*@
+                            </div>
+                        </div>
+                    </li>
+                    <li id="login">
+                        @Html.Partial("_loginPartial")
+                    </li>
+                </ul>
             </div>
         </div>
-        <section id="site-menu">
-            @Html.Partial("_Menu")
-        </section>
-    </header>
-    <div id="body">
+    </div>
+
+
+    <div id="body" class="container-fluid">
         <section class="content-wrapper main-content clear-fix">
             @RenderBody()
         </section>
     </div>
-    <footer>
-        <div class="content-wrapper">
-            <div class="float-left">
-                <p>&copy; @DateTime.Now.Year - Daemon Character</p>
+
+
+    <footer id="fh5co-footer" class="padding100">
+
+        <div class="fh5co-footer-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 col-sm-4 col-md-push-3 animated wow fadeInLeft" data-wow-delay="0.2s">
+                        <h3 class="fh5co-lead">About</h3>
+                        <ul>
+                            <li><a href="#">Tour</a></li>
+                            <li><a href="#">Company</a></li>
+                            <li><a href="#">Jobs</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">New Features</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 col-sm-4 col-md-push-3 animated wow fadeInLeft" data-wow-delay="0.4s">
+                        <h3 class="fh5co-lead">Support</h3>
+                        <ul>
+                            <li><a href="#">Help Center</a></li>
+                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="#">Security</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">More Apps</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3 col-sm-4 col-md-push-3 animated wow fadeInLeft" data-wow-delay="0.6s">
+                        <h3 class="fh5co-lead">More Links</h3>
+                        <ul>
+                            <li><a href="#">Feedback</a></li>
+                            <li><a href="#">Frequently Ask Questions</a></li>
+                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Careers</a></li>
+                            <li><a href="#">More Apps</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-3 col-sm-12 col-md-pull-9 animated wow fadeInLeft" data-wow-delay="0.8s">
+                        <div class="fh5co-footer-logo"><a href="index.html">TEST TEST</a></div>
+                        <p class="fh5co-copyright"><small>&copy; 2016. All Rights Reserved.</small></p>
+                        <p class="fh5co-social-icons">
+                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <a href="#"><i class="fa fa-dribbble"></i></a>
+                            <a href="#"><i class="fa fa-youtube"></i></a>
+                        </p>
+                    </div>
+
+                </div>
             </div>
         </div>
     </footer>
+
+    <!-- jQuery -->
+    <script src="~/Scripts/jquery.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/wow.min.js" type="text/javascript"></script>
+    <script src="~/Scripts/tutorial.js"></script>
+    <script src="~/Content/owl/owl.carousel.js" type="text/javascript"></script>
+    <!-- SmartMenus jQuery plugin -->
+    <script type="text/javascript" src="~/Scripts/jquery.smartmenus.js"></script>
+    <!-- SmartMenus jQuery Bootstrap Addon -->
+    <script type="text/javascript" src="~/Scripts/jquery.smartmenus.bootstrap.js"></script>
+    <script src="~/Scripts/contact.js" type="text/javascript"></script>
+
+
 </body>
 </html>
